objects/Field_Trip__Field_Analytic_Config__c.object
<CustomObject>
    <fields>
        <fullName>Field_Trip__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Field_Weight__c</fullName>
        <label>Field Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Analytic Config</label>
    <nameField>
        <label>Field Analytic Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Analytic Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>